--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </ul>
         </nav>
         <div class="social-buttons">
-            <a href="https://wa.me/5581999999999" target="_blank" class="whatsapp" aria-label="WhatsApp"><img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="WhatsApp"></a>
-            <a href="https://instagram.com" target="_blank" class="instagram" aria-label="Instagram"><img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="Instagram"></a>
+            <a href="https://wa.me/41995341366" target="_blank" class="whatsapp" aria-label="WhatsApp"><img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="WhatsApp"></a>
+            <a href="https://www.instagram.com/torugohh?igsh=bncyZTJsc2x5eG91&utm_source=qr" target="_blank" class="instagram" aria-label="Instagram"><img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="Instagram"></a>
             <button onclick="aumentarFonte()">A+</button>
             <button onclick="diminuirFonte()">A-</button>
         </div>
